Update MachineServiceImpl.java